@@ -28,12 +28,9 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
-import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Set;
 
 /**
  * A document collection in the
@@ -52,7 +49,7 @@ public class CoreCollection extends DocumentCollection<CoreCollection.Document> 
 
   public CoreCollection(Path path){
     this.path = path;
-    this.allowedFileSuffix = new HashSet<>(Arrays.asList(".json.xz"));
+    this.allowedFileSuffix = Set.of(".json.xz", "json");
   }
 
   @Override
@@ -68,10 +65,17 @@ public class CoreCollection extends DocumentCollection<CoreCollection.Document> 
     private Iterator<JsonNode> iter = null; // iterator for JSON document array
     private MappingIterator<JsonNode> iterator; // iterator for JSON line objects
 
-    protected Segment(Path path) throws IOException {
+    public Segment(Path path) throws IOException {
       super(path);
-      bufferedReader = new BufferedReader(new InputStreamReader(
-              new XZInputStream(new FileInputStream(path.toString()))));
+
+      if (path.endsWith(".xz")) {
+        bufferedReader = new BufferedReader(new InputStreamReader(
+          new XZInputStream(new FileInputStream(path.toString()))));
+      } else {
+        bufferedReader = new BufferedReader(new InputStreamReader(
+          new FileInputStream(path.toString())));
+      }
+
       ObjectMapper mapper = new ObjectMapper();
       iterator = mapper.readerFor(JsonNode.class).readValues(bufferedReader);
       if (iterator.hasNext()) {
@@ -112,21 +116,13 @@ public class CoreCollection extends DocumentCollection<CoreCollection.Document> 
   public static class Document implements SourceDocument {
     private String id;
     private String contents;
-    private Map<String, JsonNode> jsonFields;
+    private JsonNode jsonNode;
 
     public Document(JsonNode json) {
-      this.jsonFields = new HashMap<>();
-
-      json.fields().forEachRemaining( e -> {
-        if ("coreId".equals(e.getKey())) {
-          this.id = (json.get("doi").asText().equals("null")) ? json.get("coreId").asText() :
-                  "doi:" + json.get("doi").asText();
-        } else if ("abstract".equals(e.getKey())) {
-          this.contents = json.get("title").asText() + "\n" + json.get("abstract").asText();
-        } else {
-          this.jsonFields.put(e.getKey(), e.getValue());
-        }
-      });
+      id = (getJsonValue(json, "doi").equals("")) ?
+        getJsonValue(json, "coreId") : getJsonValue(json, "doi");
+      contents = getJsonValue(json, "title") + " " + getJsonValue(json, "abstract");
+      jsonNode = json;
     }
 
     @Override
@@ -144,8 +140,15 @@ public class CoreCollection extends DocumentCollection<CoreCollection.Document> 
       return true;
     }
 
-    public Map<String, JsonNode> jsonFields() {
-      return jsonFields;
+    public JsonNode jsonNode() {
+      return jsonNode;
+    }
+
+    public String getJsonValue(JsonNode json, String key) {
+      if (!json.has(key) || json.get(key).asText() == "null") {
+        return "";
+      }
+      return json.get(key).asText();
     }
   }
 }
